@@ -78,37 +78,172 @@ public abstract class AbstractClientTest {
     }
 
     @Test
-    public void shouldSendPostRequest() throws Exception {
+    public void shouldSendPostRequestWithEmptyBody() throws Exception {
         final String expectedResponseBody = "response body for test shouldSendPostRequest";
-        final String expectedRequestBody = "request body";
+        final String expectedRequestBody = "";
 
         final MockWebServer server = new MockWebServer();
-        server.enqueue(new MockResponse().setBody(expectedResponseBody));
         server.enqueue(new MockResponse().setBody(expectedResponseBody));
         server.start();
 
         final HttpUrl baseUrl = server.url("/testUrl");
 
-        // request with body
-        OAuthRequest request = new OAuthRequest(Verb.POST, baseUrl.toString());
+        final OAuthRequest request = new OAuthRequest(Verb.POST, baseUrl.toString());
+        try (Response response = oAuthService.execute(request, null).get(30, TimeUnit.SECONDS)) {
+            assertEquals(expectedResponseBody, response.getBody());
+        }
+
+        final RecordedRequest recordedRequest = server.takeRequest();
+        assertEquals("POST", recordedRequest.getMethod());
+        assertEquals(expectedRequestBody, recordedRequest.getBody().readUtf8());
+
+        server.shutdown();
+    }
+
+    @Test
+    public void shouldSendPostRequestWithStringBody() throws Exception {
+        final String expectedResponseBody = "response body for test shouldSendPostRequest";
+        final String expectedRequestBody = "request body";
+
+        final MockWebServer server = new MockWebServer();
+        server.enqueue(new MockResponse().setBody(expectedResponseBody));
+        server.start();
+
+        final HttpUrl baseUrl = server.url("/testUrl");
+
+        final OAuthRequest request = new OAuthRequest(Verb.POST, baseUrl.toString());
         request.setPayload(expectedRequestBody);
         try (Response response = oAuthService.execute(request, null).get(30, TimeUnit.SECONDS)) {
             assertEquals(expectedResponseBody, response.getBody());
         }
 
-        RecordedRequest recordedRequest = server.takeRequest();
+        final RecordedRequest recordedRequest = server.takeRequest();
         assertEquals("POST", recordedRequest.getMethod());
         assertEquals(expectedRequestBody, recordedRequest.getBody().readUtf8());
 
-        // request with empty body
-        request = new OAuthRequest(Verb.POST, baseUrl.toString());
+        server.shutdown();
+    }
+
+    @Test
+    public void shouldSendPostRequestWithStringBodyWithSpecialChars() throws Exception {
+        final String expectedResponseBody = "response body for test shouldSendPostRequest";
+        final String expectedRequestBody = "~/!@#$%^&*()_+//\r\n%2F&amp;";
+
+        final MockWebServer server = new MockWebServer();
+        server.enqueue(new MockResponse().setBody(expectedResponseBody));
+        server.start();
+
+        final HttpUrl baseUrl = server.url("/testUrl");
+
+        final OAuthRequest request = new OAuthRequest(Verb.POST, baseUrl.toString());
+        request.setPayload(expectedRequestBody);
         try (Response response = oAuthService.execute(request, null).get(30, TimeUnit.SECONDS)) {
             assertEquals(expectedResponseBody, response.getBody());
         }
 
-        recordedRequest = server.takeRequest();
+        final RecordedRequest recordedRequest = server.takeRequest();
         assertEquals("POST", recordedRequest.getMethod());
-        assertEquals("", recordedRequest.getBody().readUtf8());
+        assertEquals(expectedRequestBody, recordedRequest.getBody().readUtf8());
+
+        server.shutdown();
+    }
+
+    @Test
+    public void shouldSendPostRequestWithByteBodyBody() throws Exception {
+        final String expectedResponseBody = "response body for test shouldSendPostRequest";
+        final String expectedRequestBody = "request body";
+
+        final MockWebServer server = new MockWebServer();
+        server.enqueue(new MockResponse().setBody(expectedResponseBody));
+        server.start();
+
+        final HttpUrl baseUrl = server.url("/testUrl");
+
+        final OAuthRequest request = new OAuthRequest(Verb.POST, baseUrl.toString());
+        request.setPayload(expectedRequestBody.getBytes());
+        try (Response response = oAuthService.execute(request, null).get(30, TimeUnit.SECONDS)) {
+            assertEquals(expectedResponseBody, response.getBody());
+        }
+
+        final RecordedRequest recordedRequest = server.takeRequest();
+        assertEquals("POST", recordedRequest.getMethod());
+        assertEquals(expectedRequestBody, recordedRequest.getBody().readUtf8());
+
+        server.shutdown();
+    }
+
+    @Test
+    public void shouldSendPostRequestWithByteBodyWithSpecialChars() throws Exception {
+        final String expectedResponseBody = "response body for test shouldSendPostRequest";
+        final String expectedRequestBody = "~/!@#$%^&*()_+//\r\n%2F&amp;";
+
+        final MockWebServer server = new MockWebServer();
+        server.enqueue(new MockResponse().setBody(expectedResponseBody));
+        server.start();
+
+        final HttpUrl baseUrl = server.url("/testUrl");
+
+        final OAuthRequest request = new OAuthRequest(Verb.POST, baseUrl.toString());
+        request.setPayload(expectedRequestBody.getBytes());
+        try (Response response = oAuthService.execute(request, null).get(30, TimeUnit.SECONDS)) {
+            assertEquals(expectedResponseBody, response.getBody());
+        }
+
+        final RecordedRequest recordedRequest = server.takeRequest();
+        assertEquals("POST", recordedRequest.getMethod());
+        assertEquals(expectedRequestBody, recordedRequest.getBody().readUtf8());
+
+        server.shutdown();
+    }
+
+    @Test
+    public void shouldSendPostRequestWithBodyParamsBody() throws Exception {
+        final String expectedResponseBody = "response body for test shouldSendPostRequest";
+        final String expectedRequestBodyParamName = "request body param name";
+        final String expectedRequestBodyParamValue = "request body param value";
+        final String expectedRequestBody = expectedRequestBodyParamName + '=' + expectedRequestBodyParamValue;
+
+        final MockWebServer server = new MockWebServer();
+        server.enqueue(new MockResponse().setBody(expectedResponseBody));
+        server.start();
+
+        final HttpUrl baseUrl = server.url("/testUrl");
+
+        final OAuthRequest request = new OAuthRequest(Verb.POST, baseUrl.toString());
+        request.addBodyParameter(expectedRequestBodyParamName, expectedRequestBodyParamValue);
+        try (Response response = oAuthService.execute(request, null).get(30, TimeUnit.SECONDS)) {
+            assertEquals(expectedResponseBody, response.getBody());
+        }
+
+        final RecordedRequest recordedRequest = server.takeRequest();
+        assertEquals("POST", recordedRequest.getMethod());
+        assertEquals(expectedRequestBody, recordedRequest.getBody().readUtf8());
+
+        server.shutdown();
+    }
+
+    @Test
+    public void shouldSendPostRequestWithBodyParamsBodyWithSpecialChars() throws Exception {
+        final String expectedResponseBody = "response body for test shouldSendPostRequest";
+        final String expectedRequestBodyParamName = "~/!@#$%^&*()_+//\r\n%2F&amp;name";
+        final String expectedRequestBodyParamValue = "~/!@#$%^&*()_+//\r\n%2F&amp;value";
+        final String expectedRequestBody = expectedRequestBodyParamName + '=' + expectedRequestBodyParamValue;
+
+        final MockWebServer server = new MockWebServer();
+        server.enqueue(new MockResponse().setBody(expectedResponseBody));
+        server.start();
+
+        final HttpUrl baseUrl = server.url("/testUrl");
+
+        final OAuthRequest request = new OAuthRequest(Verb.POST, baseUrl.toString());
+        request.addBodyParameter(expectedRequestBodyParamName, expectedRequestBodyParamValue);
+        try (Response response = oAuthService.execute(request, null).get(30, TimeUnit.SECONDS)) {
+            assertEquals(expectedResponseBody, response.getBody());
+        }
+
+        final RecordedRequest recordedRequest = server.takeRequest();
+        assertEquals("POST", recordedRequest.getMethod());
+        assertEquals(expectedRequestBody, recordedRequest.getBody().readUtf8());
 
         server.shutdown();
     }
